--- a/core/examples/CMakeLists.txt
+++ b/core/examples/CMakeLists.txt
@@ -1,4 +1,12 @@
 
-add_executable(save_to_file
-  save_to_file.cpp
-)
+add_executable(original_example
+  "original_example.cpp" )
+
+add_executable(modern_example
+  "modern_example.cpp" )
+
+add_executable(use_counters_in_class_example
+  "use_counters_in_class_example.cpp" )
+
+add_executable(use_gauge_in_class_example
+  "use_gauge_in_class_example.cpp" )
