--- a/core/examples/CMakeLists.txt
+++ b/core/examples/CMakeLists.txt
@@ -11,5 +11,8 @@ add_executable(use_counters_in_class_example
 add_executable(use_gauge_in_class_example
   "use_gauge_in_class_example.cpp" )
 
-  add_executable(use_benchmark_in_class_example
+add_executable(use_benchmark_in_class_example
   "use_benchmark_in_class_example.cpp" )
+
+add_executable(save_to_file_example
+  "save_to_file_example.cpp" )
