--- a/simpleapi/CMakeLists.txt
+++ b/simpleapi/CMakeLists.txt
@@ -2,6 +2,6 @@
 project(prometheus-cpp-simpleapi)
 cmake_minimum_required(VERSION 2.6)
 
-add_library (${PROJECT_NAME} STATIC "./src/simpleapi.cpp")
-target_include_directories(${PROJECT_NAME} PUBLIC
- $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>)
+add_library               (${PROJECT_NAME} STATIC "./src/simpleapi.cpp")
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries     (${PROJECT_NAME} PUBLIC prometheus-cpp-lite-core)
