--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -17,6 +17,12 @@ target_link_libraries(use_benchmark_in_class_example prometheus-cpp-lite-core)
 add_executable       (save_to_file_example           "save_to_file_example.cpp" )
 target_link_libraries(save_to_file_example           prometheus-cpp-lite-core)
 
+add_executable       (push_to_server_example         "push_to_server_example.cpp" )
+target_link_libraries(push_to_server_example         prometheus-cpp-lite-core)
+
+add_executable       (gateway_example                "gateway_example.cpp" )
+target_link_libraries(gateway_example                prometheus-cpp-lite-core)
+
 
 add_executable       (simpleapi_example              "simpleapi_example.cpp")
 target_link_libraries(simpleapi_example              prometheus-cpp-simpleapi)
