--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_subdirectory("./core")
 
 add_subdirectory("./simpleapi")
 
-add_subdirectory("./3rdpatry/http-client-lite" EXCLUDE_FROM_ALL)
+add_subdirectory("./3rdpatry/http-client-lite")
 
 if(PROMETHEUS_BUILD_EXAMPLES)
   add_subdirectory("./examples")
