--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,8 +1,9 @@
-
 project(prometheus-cpp-lite-core)
 cmake_minimum_required(VERSION 3.2)
 
 file(GLOB_RECURSE PROMETHEUS_CPP_LITE_HEADERS *.h)
+
+# it is header only target
 
 add_library               (${PROJECT_NAME}     INTERFACE)
 target_sources            (${PROJECT_NAME}     INTERFACE ${PROMETHEUS_CPP_LITE_HEADERS})
@@ -12,6 +13,7 @@ target_link_libraries     (${PROJECT_NAME}     INTERFACE http-client-lite)
 
 set                       (${PROJECT_NAME}_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include PARENT_SCOPE)
 
+# it need for save_to_file_t
 if(NOT WIN32)
   find_package(Threads)
   target_link_libraries(${PROJECT_NAME} INTERFACE ${CMAKE_THREAD_LIBS_INIT})
